*ztau_bidsdata-1.0 (11 Sep 2019)

  11 Sep 2019;  <chymera@gentoo.org> +metadata.xml, +ztau_bidsdata-1.0.ebuild:
  sci-biology/ztau_bidsdata: new data package