@@ -1,1 +1,2 @@
 DIST ztau_bidsdata-1.0.tar.xz 3031481036 SHA256 c1e4f796edd34f5ba82b87fbee068d0a63316783cdc907c15903f540102862d2 SHA512 089c6435ac9a40c0c576a0ee3f1d72ec5f6d2d4abcb233c031879ca6d28efef5143ae06465eb29aa06b5608af50ccbb2c6c52c53a4b027a106c711d6d779c85f WHIRLPOOL 33112e93f7611cafe6b515e17d970277d5ad792d27f0572a5682395a4b07967ae183477677a6cc179e88ee1b68601cb2e6c5f81f2fa1fe208785d1230c19e98a
+DIST ztau_bidsdata-1.1.tar.xz 3031480792 SHA256 00c8a979893586452ed4125038a4d2b5ff8242fd6dafba9ab546f979fe01070c SHA512 c2b424b1bc29176b32e96cc771f7aa3ac7d6f33f31ab0b98acce2263ce96f82b7c7533c753c1716aec25dbda6f5a9b90ed9d7ab3098dc5db6491543c244a599c WHIRLPOOL de7e419e010bd3bddc9c8866402f571dfc965106ea4ed39805515d770997cc8b7d7be5aa5f7b3fa02aff375e8734e0425819a948ecccd820d230effb05e5a772
